--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,4 +15,4 @@ RUN go get github.com/githubnemo/CompileDaemon
 
 EXPOSE 5000
 
-ENTRYPOINT CompileDaemon --build="go build cmd/auth/main.go" --command=./main
+ENTRYPOINT CompileDaemon --build="go build cmd/email_service/main.go" --command=./main
