--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   postgesql:
     image: postgres:13-alpine
-    container_name: auth_postgesql
+    container_name: mail_postgesql
     ports:
       - "5432:5432"
     restart: always
