--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,24 @@ services:
     networks:
       - microservice_network
 
+  jaeger:
+    container_name: jaeger_container
+    restart: always
+    image: jaegertracing/all-in-one:1.21
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686
+      - 14268:14268
+      - 14250:14250
+      - 9411:9411
+    networks:
+      - microservice_network
+
 networks:
   microservice_network:
     driver: bridge
